# MPMSimulator

./: .gitignore  LICENSE.md  README.md
2D_SIM/: 2D_SIM.sln  2D_SIM.vcxproj  2D_SIM.vcxproj.filters  EntryPoint.cpp  Shader.h  Simulator_2D.cpp  Simulator_2D.h  Utils.cpp  Utils.h
2D_SIM/glad/: glad.c
2D_SIM/shaders/: shaderPoint.frag  shaderPoint.vert
Libraries/includes/glad/: glad.h
Libraries/includes/stb_image/: stb_image.h
Libraries/lib/: glfw3.lib
Simulator3D/: .gitignore  CMakeLists.txt  Simulator3D.sln
Simulator3D/Simulator3D/: Camera.h  EntryPoint.cpp  ParticleStructures.h  Shader.h  SimVisualizer.cpp  SimVisualizer.h  Simulator3D.vcxproj  Simulator3D.vcxproj.filters  Simulator_3D.cpp  Simulator_3D.h  Utils.cpp  Utils.h
Simulator3D/Simulator3D/IO/: FrameSBF.h  ReadSBF.cpp  ReadSBF.h  WriteSBF.cpp  WriteSBF.h
Simulator3D/Simulator3D/cuda/: MinMath.h  Sim3D.cu  Simulator_3D_GPU.cpp  Simulator_3D_GPU.h  svd3_cuda.cuh
Simulator3D/Simulator3D/shaders/: shaderBB.frag  shaderBB.vert  shaderPoint.frag  shaderPoint.vert
Simulator3D/Simulator3D/shadersShadows/: shaderBB.frag  shaderBB.vert  shaderPoint.frag  shaderPoint.vert  shaderShadowMap.frag  shaderShadowMap.vert
docs/MemoriaLatex/: Lliurable1.tex
docs/MemoriaLatex/BibTex/: cit.bib
files/: db1.txt
